<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <!-- Title -->
    <TextView
        android:id="@+id/diaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:text="@string/plant_diary_title"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- RecyclerView for diary entries -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/diaryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:clipToPadding="false"
        android:paddingBottom="90dp"
        tools:listitem="@layout/item_diary_entry" />

    <LinearLayout
        android:id="@+id/emptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/ic_eco"
            android:src="@drawable/ic_eco" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_diary_entries"
            android:textColor="@color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- FloatingActionButton for adding new diary entries -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addDiaryEntryFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="28dp"
        android:contentDescription="@string/add_diary_entry"
        android:src="@drawable/ic_add" />
</FrameLayout>
