<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/luxCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/card_bg"
    android:padding="18dp"
    android:layout_marginBottom="18dp"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/metricIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/lux_measurement_icon"
        android:src="@drawable/ic_lux"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/metricValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textColor="#43A047"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/metricUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/lx"
        android:textColor="#757575"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/metricLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lux"
        android:textColor="#43A047"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
